test/errors/def_duplicate_parameter.py
def foo(x, y, x):
    pass
