test/errors/def_duplicate_parameter.py.expected
test/errors/def_duplicate_parameter.py:1 error: duplicate argument 'x'
